--- a/Data.html
+++ b/Data.html
@@ -9,28 +9,28 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-left">
-                <li><a href=C:\Users\lukea\OneDrive\Desktop\Homework\Home.html>Latitude</a></li>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-left">
+        <li><a href="C:\Users\lukea\Hunt11.github.io\Home.html">Latitude</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Graphs <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="C:\Users\lukea\Hunt11.github.io\Graph 1.html">Cloudiness</a></li>
+              <li><a href="C:\Users\lukea\Hunt11.github.io\Graph 2.html">Humidity</a></li>
+              <li><a href="C:\Users\lukea\Hunt11.github.io\Graph 3.html">Maximum Temperature</a></li>
+              <li><a href="C:\Users\lukea\Hunt11.github.io\Graph 4.html">Wind Speed</a></li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
-              <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Graphs <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="C:\Users\lukea\OneDrive\Desktop\Homework\Graph 1.html">Cloudiness</a></li>
-                  <li><a href="C:\Users\lukea\OneDrive\Desktop\Homework\Graph 2.html">Humidity</a></li>
-                  <li><a href="C:\Users\lukea\OneDrive\Desktop\Homework\Graph 3.html">Maximum Temperature</a></li>
-                  <li><a href="C:\Users\lukea\OneDrive\Desktop\Homework\Graph 4.html">Wind Speed</a></li>
-                </ul>
-              </li>
-              <li><a href="C:\Users\lukea\OneDrive\Desktop\Homework\Comparison.html">Comparison</a></li>
-              <li><a href="C:\Users\lukea\OneDrive\Desktop\Homework\Data.html">Data</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>   
+          </li>
+          <li><a href="C:\Users\lukea\Hunt11.github.io\Comparison.html">Comparison</a></li>
+          <li><a href="C:\Users\lukea\Hunt11.github.io\Data.html">Data</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 <p><table class="table table-bordered table-hover table-condensed">
     <thead><tr><th title="Field #1">City_ID</th>
     <th title="Field #2">City</th>
