--- a/Home.html
+++ b/Home.html
@@ -25,7 +25,7 @@
                   <li><a href="C:\Users\lukea\Hunt11.github.io\Graph 4.html">Wind Speed</a></li>
                 </ul>
               </li>
-              <li><a href="C:\Users\lukea\Hunt11.github.io\Comparison.html">Comparison</a></li>
+              <li><a href="https://hunt2011.github.io/Comparison">Comparison</a></li>
               <li><a href="C:\Users\lukea\Hunt11.github.io\Data.html">Data</a></li>
             </ul>
           </div>
